force-app/main/default/objects/SeasonUserMeasurement__c/SeasonUserMeasurement__c.object-meta.xml
<CustomObject>
    <label>Season User Measurement</label>
    <nameField>
        <displayFormat>UM{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Season User Measurements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>