force-app/main/default/objects/SeasonUserMeasurement__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Season</label>
    <referenceTo>Season__c</referenceTo>
    <relationshipLabel>Season User Measurements</relationshipLabel>
    <relationshipName>SeasonUserMeasurements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>